--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link
-        href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Unica+One&family=Maven+Pro&family=Calligraffitti&display=swap"
+        href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&family=Unica+One&family=Maven+Pro&family=Calligraffitti&display=swap"
         rel="stylesheet"
     />
     <link rel="stylesheet" href="/style.css" />
