--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     />
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="square.png" />
+    <meta name="viewport" content="width=device-width" initial-scale="1" />
 </head>
 <main></main>
 <script src="/bundle.js"></script>
